--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -19,7 +19,7 @@
     <div class="flex flex-col gap-2 ">
       <div class="flex flex-row w-full justify-between gap-2.5" >
         <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
-          <a href="{% url 'products:girlclothes' %}"><img src="static/Photo/Screenshot_85.png" alt="T-shirt" class="w-full h-full"></a></div>
+          <a href="{% url 'products:girlclothes' %}"><img src="static/Photo/Screenshot_85.png" alt="T-shirt" class="[310px] h-[310px]"></a></div>
           <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
           </div></a>
           <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div></a>
@@ -42,6 +42,7 @@
           </div></a>
       </div>
     </div>
+    
   </section>
 </div>
 {% endblock  %}
