--- a/apps/products/templates/products/Manclothes.html
+++ b/apps/products/templates/products/Manclothes.html
@@ -2,17 +2,17 @@
 {% load static %}
 {% block title %}Man clothes{% endblock %}
 {% block topbar %}
-<section class="relative w-full h-[500px] overflow-hidden flex justify-center items-center mt-20">
-  <div class="absolute flex gap-4">
-    <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/box.png'%}" alt="Photo"></div>
-    <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/box.png'%}" alt="Photo"></div>
-    <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#000000] to-[#141414] flex justify-center items-center"><img src="{%static 'Photo/box.png'%}" alt="Photo"></div>
-  </div>
-  <div class="absolute flex flex-row justify-between items-center w-full " style="padding: 1% 1%;">
-    <button class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center"><svg class="w-[25px] h-[25px]"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
+<section class="w-full max-w-full overflow-hidden h-[500px] flex justify-center items-center mt-10 z-[10] relative">
+	<div class="flex gap-4 slider-container">
+	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><a href="Manclothes.html"><img src="{% static 'Photo/photo_for_slider.png' %}" alt="Photo"></a></div>
+	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/photo_for_slider_2.png' %}" alt="Photo"></div>
+	  <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
+	</div>
+	<div id="button" class="absolute flex flex-row justify-between items-center w-full" style="padding: 7% 7%;">
+	  <button id="prevBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg class="w-[25px] h-[25px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
 
-    <button class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
-  </div>
+	  <button id="nextBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
+	</div>
 </section>
 <section class="flex flex-col mt-10 gap-2 w-full justify-center items-center pl-[104px] pr-[104px] mb-10">
   
@@ -52,4 +52,13 @@
   <a href="{% url 'products:shop' %}"><div class="relative"> <img class="relative top-20 w-full scale-110 blur-[1px]" src="{%static 'Photo\jaanus-jagomagi-FFUPFHcp2YU-unsplash.jpg'%}" alt=""></div></a>
   <div class="absolute flex flex-col pl-[3%] text-[25px] text-white font-bold"><span>Sale of collections</span><span>From previous seasons</span></div>
 </section>
+<style>
+  .slider-container {
+      transition: transform 0.4s ease-in-out;
+  }
+  .slide {
+      flex: 0 0 100%;
+  }
+  </style>
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
