--- a/apps/products/templates/products/index.html
+++ b/apps/products/templates/products/index.html
@@ -2,28 +2,29 @@
 {% load static %}
 {% block topbar %}
   <div class="Man-categories">
-  <section class="w-full max-w-full overflow-hidden h-[500px] flex justify-center items-center mt-20 z-[10]">
-    <div class="flex gap-4">
-      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></a></div>
-      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
-      <div class="w-[1300px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
-    </div>
-    <div id="button" class="absolute flex flex-row justify-between items-center w-full " style="padding: 1% 1%;">
-      <button class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center"><svg class="w-[25px] h-[25px]"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
-
-      <button class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
-    </div>
+    <section class="w-full max-w-full overflow-hidden h-[500px] flex justify-center items-center mt-10 z-[10] relative">
+      <div class="flex gap-4 slider-container">
+        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><a href="Manclothes.html"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></a></div>
+        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
+        <div class="w-[1500px] h-[500px] bg-gradient-to-r from-[#BFD7FD] to-[#DD8AB7] flex justify-center items-center slide"><img src="{% static 'Photo/Без имени-2.png' %}" alt="Photo"></div>
+      </div>
+      <div id="button" class="absolute flex flex-row justify-between items-center w-full" style="padding: 7% 7%;">
+        <button id="prevBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg class="w-[25px] h-[25px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z"/></svg></button>
+  
+        <button id="nextBtn" class="w-[70px] h-[70px] bg-white rounded-[50px] flex justify-center items-center hover:bg-gray-200 transition shadow-xl"><svg xmlns="http://www.w3.org/2000/svg" class="w-[25px] h-[25px]" viewBox="0 0 320 512"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg></button>
+      </div>
   </section>
-  <section class="flex flex-col mt-5 gap-2 w-full pl-[104px] pr-[104px] mb-20">
-    <span class="text-[20px]" style="font-family: Microsoft Sans Serif;">For Woman</span>
+  <section class="flex flex-col items-center mt-5 gap-2 w-full pl-[104px] pr-[104px] mb-20">
+    
     <div class="flex flex-col gap-2 ">
+      <span class="text-[20px]" style="font-family: Microsoft Sans Serif;">For Woman</span>
       <div class="flex flex-row w-full justify-between gap-2.5" >
         <div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden">
           <a href="{% url 'products:girlclothes' %}"><img src="static/Photo/Screenshot_85.png" alt="T-shirt" class="[310px] h-[310px]"></a></div>
-          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
+          <a href="{% url 'products:shop' %}?gender=women"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden " ><img src="static/Photo/Screenshot_84.png" class="w-full h-full" alt="accessories">
           </div></a>
-          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div></a>
-          <a href="{% url 'products:shop' %}"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full" alt="Parfume"></div></a>
+          <a href="{% url 'products:shop' %}?gender=women"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_86.png" class="w-full h-full" alt="Shose"></div></a>
+          <a href="{% url 'products:shop' %}?gender=women"><div class="flex flex-col justify-center items-center w-[310px] h-[310px] bg-black overflow-hidden"><img src="static/Photo/Screenshot_87.png" class="w-full h-full" alt="Parfume"></div></a>
       </div>
       <span class="text-[20px] mt-3" style="font-family: Microsoft Sans Serif;">For Man</span>
       <div class="flex flex-row w-full justify-between gap-2.5 " >
@@ -45,4 +46,13 @@
     
   </section>
 </div>
+<style>
+  .slider-container {
+      transition: transform 0.8s ease-in-out;
+  }
+  .slide {
+      flex: 0 0 100%;
+  }
+  </style>
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock  %}
